--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                <span>Resume</span>
              </a>
          </li><li>
-             <a href="">
+             <a href="contact.html">
                <span>Get in touch</span>
              </a>
          </li>
