--- a/contact.html
+++ b/contact.html
@@ -114,6 +114,9 @@
      </div> 
      
  </div> 
+    <script>
+        document.addEventListener("touchstart", function() {},false);
+    </script>
     
 </body>
 
