--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
      </div>  
      
      <div class="footlogo">        
-       <img src="ialogo.svg" height="50px">
+       <img src="ialogo.svg">
      </div> 
      
  </div> 
