Added email, other tweaks

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                <span>About</span>
              </a>
          </li><li>
-             <a href="">
+             <a href="ADAMSRESUME.pdf" target="new">
                <span>Resume</span>
              </a>
          </li><li>
@@ -83,7 +83,7 @@
         <p>Contact Me:</p> 
        <ul>
            <li> 
-                <a href="">
+                <a href="mailto:ianfranceadams@gmail.com">
                   <i class="fas fa-envelope fa-lg"></i> 
                 </a>
            </li>
