--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                <span>About</span>
              </a>
          </li><li>
-             <a href="">
+             <a href="ADAMSRESUME.pdf" target="new">
                <span>Resume</span>
              </a>
          </li><li>
@@ -89,7 +89,7 @@
         <p>Contact Me:</p> 
        <ul>
            <li> 
-                <a href="">
+                <a href="mailto:ianfranceadams@gmail.com">
                   <i class="fas fa-envelope fa-lg"></i> 
                 </a>
            </li>
