--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
      </div>        
      
      <div class="contact">    
-        <p>Contact Me:</p> 
+        <p>Contact Me</p> 
        <ul>
            <li> 
                 <a href="mailto:ianfranceadams@gmail.com">
