--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
           method="POST">
             <input class="form-name" type="text" name="name" placeholder="Your name">
             <input class="email" type="email" name="name" placeholder="Your email address">
-            <textarea class="form-message" name="user_message" placeholder="Your note here.  I look forward to     getting back to you soon!"></textarea>
+            <textarea class="form-message" name="user_message" placeholder="Your note here.  I look forward to getting back to you soon!"></textarea>
             <button class="send-button" type="submit">Send</button> 
         </form>
 
@@ -80,7 +80,7 @@
      </div>     
      
      <div class="contact">    
-        <p>Contact Me:</p> 
+        <p>Contact Me</p> 
        <ul>
            <li> 
                 <a href="mailto:ianfranceadams@gmail.com">
