Small changes, photo, etc

--- a/index.html
+++ b/index.html
@@ -59,12 +59,45 @@
       
        <div class="proj drag">
            <img src="images/dragonwelllogo.svg">
+               <div class="proj dragoverlay">
+                   <div class="hovtext">
+                     <p>See case study</p>
+                       <ul>
+                        <li> Dogs </li>
+                        <li> Cats </li>
+                        <li> Smells </li>
+                       </ul>
+                      <button class="send-button"> View Case Study </button>
+                    </div>
+               </div>
        </div>
        <div class="proj bud">
            <img src="images/showbuddylogo.svg">
+               <div class="proj dragoverlay">
+                  <div class="hovtext">
+                     <p>See case study</p>
+                       <ul>
+                        <li> Dogs </li>
+                        <li> Cats </li>
+                        <li> Smells </li>
+                       </ul>
+                      <button> View Case Study </button>
+                    </div>
+               </div>
        </div>
        <div class="proj orion">
            <img src="images/orionlogo.svg">
+               <div class="proj dragoverlay">
+                  <div class="hovtext">
+                     <p>See case study</p>
+                       <ul>
+                        <li> Dogs </li>
+                        <li> Cats </li>
+                        <li> Smells </li>
+                       </ul>
+                      <button> View Case Study </button>
+                    </div>
+               </div>
        </div>
      
    <div class="footnav">    
