Home case study hovers

--- a/index.html
+++ b/index.html
@@ -61,41 +61,46 @@
            <img src="images/dragonwelllogo.svg">
                <div class="proj dragoverlay">
                    <div class="hovtext">
-                     <p>See case study</p>
+                     <p>An engaging and easily searchable e-commerce site for discerning tea and coffee drinkers.</p>
                        <ul>
-                        <li> Dogs </li>
-                        <li> Cats </li>
-                        <li> Smells </li>
+                        <li> User Research </li>
+                        <li> User Testing </li>
+                        <li> Visual Design </li>
                        </ul>
-                      <button class="send-button"> View Case Study </button>
+                        <a class="hovbutton" href="dragonwell.html">View Case Study</a>    
                     </div>
                </div>
        </div>
        <div class="proj bud">
            <img src="images/showbuddylogo.svg">
-               <div class="proj dragoverlay">
+               <div class="proj budoverlay">
                   <div class="hovtext">
-                     <p>See case study</p>
+                     <p>A concert and live performance finding mobile app, emphasizing ease of onboarding and navigation.</p>
                        <ul>
-                        <li> Dogs </li>
-                        <li> Cats </li>
-                        <li> Smells </li>
+                        <li> User Stories and Flows </li>
+                        <li> Wireframing </li>
+                        <li> Interactive Prototyping </li>
                        </ul>
-                      <button> View Case Study </button>
+                        <a class="hovbutton bud-button" href="showbuddy.html">
+                              View Case Study 
+                            </a>   
                     </div>
                </div>
        </div>
        <div class="proj orion">
            <img src="images/orionlogo.svg">
-               <div class="proj dragoverlay">
+               <div class="proj orionoverlay">
                   <div class="hovtext">
-                     <p>See case study</p>
+                     <p>A file storage and organization system for users needing
+                        clarity, convenience, and simplicity.</p>
                        <ul>
-                        <li> Dogs </li>
-                        <li> Cats </li>
-                        <li> Smells </li>
+                        <li> User Personas </li>
+                        <li> A / B Testing </li>
+                        <li> Responsive Design </li>
                        </ul>
-                      <button> View Case Study </button>
+                        <a class="hovbutton orion-button" href="orion.html"> 
+                          View Case Study 
+                        </a>
                     </div>
                </div>
        </div>
