Additions, changes, rresume started

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                <span>About</span>
              </a>
          </li><li>
-             <a href="ADAMSRESUME.pdf" target="new">
+             <a href="resume.html"> <!-- <a href="ADAMSRESUME.pdf" target="new"> -->
                <span>Resume</span>
              </a>
          </li><li>
@@ -112,7 +112,7 @@
                <span>About</span>
              </a>
          </li><li>
-             <a href="ADAMSRESUME.pdf" target="new">
+              <a href="resume.html">
                <span>Resume</span>
              </a>
          </li><li>
