--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                <span>About</span>
              </a>
          </li><li>
-             <a href="ADAMSRESUME.pdf" target="new">
+              <a href="resume.html">
                <span>Resume</span>
              </a>
          </li><li>
@@ -68,7 +68,7 @@
                <span>About</span>
              </a>
          </li><li>
-             <a href="ADAMSRESUME.pdf" target="new">
+             <a href="resume.html">
                <span>Resume</span>
              </a>
          </li><li>
