--- a/showbuddy.html
+++ b/showbuddy.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-  <title>Ian Adams - User Centered Designer</title> 
+  <title>ShowBuddy Case Study</title> 
   
   
   <link rel="stylesheet" href="assets/normalize.css">
@@ -34,7 +34,7 @@
                <span>About</span>
              </a>
          </li><li>
-             <a href="ADAMSRESUME.pdf" target="new">
+              <a href="resume.html">
                <span>Resume</span>
              </a>
          </li><li>
@@ -57,7 +57,7 @@
                <span>About</span>
              </a>
          </li><li>
-             <a href="ADAMSRESUME.pdf" target="new">
+              <a href="resume.html">
                <span>Resume</span>
              </a>
          </li><li>
