--- a/resume.html
+++ b/resume.html
@@ -114,7 +114,7 @@
       <div class="inst"> Full Service Shopper and Delivery Driver <br>
                      Instacart - Chicago, Illinois <br>
                      2017 - 2018 
-                    <p class="disc"> Online service for fast and courteous delivery of groceries from various store locations to customers throughout the city of Chicago. I both shopped in stores and delivered groceries using my personal vehicle and Instacart Shopper app.
+                    <p class="disc"> Online service for fast and courteous delivery of groceries from various store locations to customers throughout the city of Chicago. I both shopped in stores and delivered groceries using my personal vehicle and the Instacart Shopper app.
                     </p> 
                      
       </div>    
@@ -136,7 +136,7 @@
       <div class="harv"> Combine Crew Member <br>
                      Odegard Harvesting - Whitetail, Montana <br>
                      2012 - 2013
-                    <p class="disc"> Joined custom harvesting crew after graduating college, driving a combine and/or grain cart 10-12 hours per day harvesting 100-150 acres and 20+ tons of grain per hour on farms throughout the Grain Belt. 
+                    <p class="disc"> Joined custom harvesting crew after graduating college, driving a combine and/or grain cart 10-12 hours per day, harvesting 100-150 acres and 20+ tons of grain per hour on farms throughout the Grain Belt. 
                     </p> 
       </div>   
      
