--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
      
      <p class="bloc"> <span>Bloc Designer Track</span> <br>
                      Immersive, mentor-led apprenticeship in UX / UI Design <br>
-                     www.Bloc.io, 2017-2018 
+                     <a href="https://www.bloc.io" target="new" cursor="pointer"> www.Bloc.io</a>, 2017-2018 
       </p>    
      <p class="umn"> <span>Bachelor of Arts in Music</span> <br>
                       University of Minnesota, Minneapolis, 2012
@@ -107,7 +107,7 @@
              <li> OmniGraffle </li>
              <li> UsabilityHub  </li>
              <li> HTML / CSS  </li>
-             <li> JavaScript  </li>
+             <li> JavaScript (basic)  </li>
              <li> Git / Github </li> 
            </ul>
      
