--- a/index.html
+++ b/index.html
@@ -132,22 +132,22 @@
                 </a>
            </li>
            <li> 
-                <a href="https://www.linkedin.com/in/ianfranceadams">
+                <a href="https://www.linkedin.com/in/ianfranceadams" target="new">
                   <i class="fab fa-linkedin fa-lg"></i> 
                 </a>
            </li>
            <li> 
-                <a href="https://github.com/ianfranceadams">
+                <a href="https://github.com/ianfranceadams" target="new">
                   <i class="fab fa-github fa-lg"></i> 
                 </a>
            </li>
            <li> 
-                <a href="https://www.instagram.com/ianfranceadams/">
+                <a href="https://www.instagram.com/ianfranceadams/" target="new">
                   <i class="fab fa-instagram fa-lg"></i> 
                 </a>
            </li>
            <li> 
-                <a href="https://twitter.com/IanFranceAdams">
+                <a href="https://twitter.com/IanFranceAdams" target="new">
                   <i class="fab fa-twitter fa-lg"></i> 
                 </a>
            </li> 
