--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
      
      <p class="bloc"> <span>Bloc Designer Track</span> <br>
                      Immersive, mentor-led apprenticeship in UX / UI Design <br>
-                     <a href="https://www.bloc.io" target="new" cursor="pointer"> www.Bloc.io</a>, 2017-2018 
+                     <a href="https://www.bloc.io" target="new" cursor="pointer" style="border-bottom: 1px black solid"> www.Bloc.io</a>, 2017-2018 
       </p>    
      <p class="umn"> <span>Bachelor of Arts in Music</span> <br>
                       University of Minnesota, Minneapolis, 2012
@@ -114,7 +114,7 @@
       <p class="work"> Work Experience </p>
      
       <div class="inst"> Full Service Shopper and Delivery Driver <br>
-                    <a href="https://www.instacart.com/" target="new" cursor="pointer">
+                    <a href="https://www.instacart.com/" target="new" cursor="pointer" >
                     <span>Instacart</span> </a>- Chicago, Illinois <br>
                      2017 - 2018 
                     <p class="disc"> Online service for fast and courteous delivery of groceries from various store locations to customers throughout the city of Chicago. I both shopped in stores and delivered groceries using my personal vehicle and the Instacart Shopper app.
@@ -156,6 +156,7 @@
              <li> Travelling </li>
              <li> Geography </li>   
              <li> Classical Music </li>  
+             <li> American Music </li> 
              <li> Photography </li>
              <li> Art </li>
              <li> History </li>
@@ -165,7 +166,6 @@
              <li> Religion </li> 
              <li> German </li>
              <li> Japanese Culture </li>
-             <li> Kendo </li>
              <li> Meditation </li>
              <li> Rinzai Zen Buddhism </li>
            </ul>
