Dragonwell Portfolio down to user testing

--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
      
      <ul class=rescontact>
         <li> www.ianadamsdesign.com  </li>
-         <li> <a href="mailto:ianfranceadams@gmail.com" style="border-bottom: 1px black solid">
+         <li> <a href="mailto:ianfranceadams@gmail.com" style="border-bottom: 1px #523F6E solid">
              ianfranceadams@gmail.com 
     </a> </li> 
         <li> 828.699.4071  </li>
@@ -64,7 +64,7 @@
      
      <p class="bloc"> <span>Bloc Designer Track</span> <br>
                      Immersive, mentor-led apprenticeship in UX / UI Design <br>
-                     <a href="https://www.bloc.io" target="new" cursor="pointer" style="border-bottom: 1px black solid"> www.Bloc.io</a>, 2017-2018 
+                     <a href="https://www.bloc.io" target="new" cursor="pointer" style="border-bottom: 1px #523F6E solid"> www.Bloc.io</a>, 2017-2018 
       </p>    
      <p class="umn"> <span>Bachelor of Arts in Music</span> <br>
                       University of Minnesota, Minneapolis, 2012
