--- a/dragonwell.html
+++ b/dragonwell.html
@@ -231,7 +231,10 @@
      </p>
     
      <div class="wires">
-       <img src="images/wire.png">
+       <img src="images/OmniHome.png"> 
+        <img src="images/OmniCoffee.png">
+        <img src="images/OmniEthiopian%20Add%20to%20cart.png">
+         <p> A few sample wireframes made in OmniGraffle.&nbsp; <a href="DragonwellWireframes.pdf" target="new" style="border-bottom: 1px #523F6E solid">Click here</a> to open more as a PDF file in a new tab.  </p>
     </div>
      
     <p class="abtest"> Moving into the full mockup stage, a series of <span>A / B tests</span> on <a href="https://usabilityhub.com/" target="new" style="border-bottom: 1px #523F6E solid">UsabilityHub</a> influenced elements of the layout, allowing potential users to choose between alternative hero layouts, header spacings, and payment approaches.  Here are those examples:
