--- a/orion.html
+++ b/orion.html
@@ -231,7 +231,7 @@
         <img src="images/Olofiwire.png"> 
         <img src="images/Olofialthome.png">
         <img src="images/Olofialtdiaghome.png">
-         <p> A few homepage layout ideas made in <a href="https://balsamiq.com/" target="new" style="border-bottom: 1px #001b4c solid">Balsamiq</a> </p>
+         <p> A few homepage layout ideas made in Balsamiq </p>
     </div>     
     
     <div class="wires2">
