--- a/showbuddy.html
+++ b/showbuddy.html
@@ -252,7 +252,7 @@
        <img id="sbwire2" src="images/SB1st6mobile.png">   
          <p> First user interface design iteration featuring appropriate navigation bars and toolbars. <a href="SB1st6UIScreens.pdf" target="new" style="border-bottom: 1px #141414 solid">Click here</a> to open more screens as a PDF in a new tab. </p>
        <img id="sbwire3" src="images/SBSearchUpdates.png">
-       <img id="sbwire3" src="images/SBSearchMobile.png">
+       <img id="sbwire3" src="images/SBUpdateMobile.png">
          <p> Further progress featuring a stepper control for easily setting one's distance radius and switches (rather than check boxes) for clearly turning on and off various preferences. <a href="SBSearchUpdates.pdf" target="new" style="border-bottom: 1px #141414 solid">Click here</a> to open more screens as a PDF in a new tab. </p>
     </div>
      
