Contact form shadow, Dragonwell conclusion scroll JS

--- a/orion.html
+++ b/orion.html
@@ -259,7 +259,7 @@
        <img src="images/ODashboardAdds.jpg"> 
         <img src="images/ODashboardpluses.jpg">
         
-        <p> Interface mockups used for navigation testing on <a href="https://usabilityhub.com/" target="new" style="border-bottom: 1px #001b4c solid">UsabilityHub</a> 
+        <p> Interface mockups used for navigation testing on UsabilityHub 
         </p>
        
         <img src="images/OHomepage.jpg">
