--- a/resume.html
+++ b/resume.html
@@ -97,7 +97,7 @@
              <li> Writing  </li>  
           </ul>
      
-      <p class="exp"> Experienced with </p>
+      <p class="exp"> Tools </p>
       
            <ul class=elist>
              <li> Sketch  </li>
