--- a/contact.html
+++ b/contact.html
@@ -66,8 +66,8 @@
      
         <form class="form" action="https://formspree.io/ianfranceadams@gmail.com"
           method="POST">
-            <input class="form-name" type="text" name="name" placeholder="Your name">
-            <input class="email" type="email" name="name" placeholder="Your email address">
+            <input class="form-name" type="text" name="name" placeholder="Name">
+            <input class="email" type="email" name="name" placeholder="Email address">
             <textarea class="form-message" name="user_message" placeholder="Your note here.  I look forward to getting back to you soon!"></textarea>
             <button class="send-button" type="submit">Send</button> 
         </form>
