--- a/resume.html
+++ b/resume.html
@@ -131,7 +131,7 @@
                     <a href="https://www.veoride.com/" target="new" cursor="pointer" >
                     <span>VeoRide</span> </a> - Chicago, Illinois <br>
                      2018 - present 
-                    <p class="disc"> Revamping dockless micro-mobility share company's mobile app and applying the user-centered design process to continuously, incrementally improve the experience for all involved
+                    <p class="disc"> Revamped dockless micro-mobility share company's mobile app while applying the user-centered design process to continuously, incrementally improve the product experience for all involved
                     </p> 
                      
       </div>    
