--- a/resume.html
+++ b/resume.html
@@ -130,7 +130,7 @@
      <div class="veo"> UI/UX Designer <br>
                     <a href="https://www.veoride.com/" target="new" cursor="pointer" >
                     <span>VeoRide</span> </a> - Chicago, Illinois <br>
-                     2018 - present 
+                     August 2018 - July 2019 
                     <p class="disc"> Revamped dockless micro-mobility share company's mobile app while applying the user-centered design process to continuously, incrementally improve the product experience for all involved
                     </p> 
                      
