--- a/oindex.html
+++ b/oindex.html
@@ -164,16 +164,16 @@
         </ul>
       </section>
 
-    <!-- One more call to action -->
+    <!-- One more call to action 
     <section class="call-to-action">
       <div class="container hero">
-        <h2>Orion is great</h2>
-        <p>Orion is the greatest website on the face of the earth<br/>
-          It will surely change your life</p>
-        <a href="odashboard.html" class="btn">Push this immediately!</a>
+        <h2></h2>
+        <p><br/>
+          </p>
+        <a href="odashboard.html" class="btn">Start Your Trial Today!</a>
       </div>
      </section>
-    </main>
+    </main>  -->
 
     <!--Footer-->
     <footer>
