--- a/resume.html
+++ b/resume.html
@@ -103,7 +103,7 @@
              <li> Design Thinking  </li> 
              <li> Competitive Analysis </li>
              <li> Personas </li>
-             <li> A / B Testing  </li>
+             <li> A/B Testing  </li>
              <li> User Testing  </li>
              <li> Writing  </li>  
           </ul>
@@ -112,13 +112,16 @@
       
            <ul class=elist>
              <li> Sketch  </li>
-             <li> Balsamiq </li> 
-             <li> Figma </li>
+             <li> Adobe XD </li>
+             <li> Zeplin </li>
              <li> InVision </li>
+             <li> Balsamiq </li> 
+             <li> UsabilityHub  </li>
+             <li> Optimal Workshop </li>
+             <li> Figma </li>
              <li> Illustrator </li>
              <li> Photoshop </li>
              <li> OmniGraffle </li>
-             <li> UsabilityHub  </li>
              <li> HTML / CSS  </li>
              <li> JavaScript (basic)  </li>
              <li> Git / Github </li> 
