--- a/resume.html
+++ b/resume.html
@@ -114,6 +114,7 @@
              <li> Sketch  </li>
              <li> Adobe XD </li>
              <li> Zeplin </li>
+             <li> Jira </li>
              <li> InVision </li>
              <li> Balsamiq </li> 
              <li> UsabilityHub  </li>
