--- a/resume.html
+++ b/resume.html
@@ -131,7 +131,7 @@
       <p class="work"> Work Experience </p>
      
      
-     <div class="veo"> UI/UX Designer <br>
+     <div class="veo"> UX/UI Designer <br>
                     <a href="https://www.veoride.com/" target="new" cursor="pointer" >
                     <span>VeoRide</span> </a> - Chicago, Illinois <br>
                      August 2018 - July 2019 
