--- a/resume.html
+++ b/resume.html
@@ -135,12 +135,12 @@
                     <a href="https://www.veoride.com/" target="new" cursor="pointer" >
                     <span>VeoRide</span> </a> - Chicago, Illinois <br>
                      August 2018 - July 2019 
-                    <p class="disc"> Revamped dockless micro-mobility share company's mobile app while applying the user-centered design process to continuously, incrementally improve the product experience for all involved - read more about this experience <a href="bio.html#list"><span style="border-bottom: 1.5px black solid;">here</span></a>
+                    <p class="disc"> Revamped dockless micro-mobility share company's mobile app while applying the user-centered design process to continuously, incrementally improve the product experience for all involved - read more about this experience <a href="veo.html"><span style="border-bottom: 1.5px black solid;">here</span></a>
                     </p> 
                      
       </div>    
      
-      <div class="inst"> Full Service Shopper and Delivery Driver <br>
+      <div class="inst"> Full-Service Shopper and Delivery Driver <br>
                     <a href="https://www.instacart.com/" target="new" cursor="pointer" >
                     <span>Instacart</span> </a> - Chicago, Illinois <br>
                      2017 - 2018 
