--- a/veo.html
+++ b/veo.html
@@ -103,8 +103,8 @@
 <ul>
    <li>Based on field research and interviews with fleet technicians and coordinators</li>
    <li>Thorough analysis and cataloguing of fleet technician user stories</li>
-   <li>Research findings synthesized into user flows and an initial MVP version </li>
-   <li>App has dramatically improved efficiency of field operations and tracking of fleet technicians' work</li>
+   <li>Research findings synthesized into user flows and an initial MVP version. Key features determined in collaboration with operations leadership. </li>
+   <li>App dramatically improved efficiency of field operations and tracking of fleet technicians' work</li>
 </ul>
 
 <br> 
