--- a/veo.html
+++ b/veo.html
@@ -142,7 +142,10 @@
    <li>Survey of largest markets to determine what drives ridership (February-April 2019) </li>
    <li>Constant monitoring of social media mentions and app reviews to gauge sentiment and improve service </li>
    <li>Regular contact with local market managers to learn of opportunities for app and overall service improvement </li>
+    <li>Always distilled research findings into easily digestible reports including charts and written summaries. Feedback shared company-wide, in particular for the benefit of operations and sales teams as well as company leadership </li>
     <li>Consistently translated user research into concrete app improvements that improved functionality and understandability for users and addressed needs of other stakeholders like city governments </li>
+    
+    
 </ul>
     <br>
    <ul>And finally, <a href="https://www.veoride.com/cold-weather-biking-is-fun/" target="new" style="border-bottom: 2px #00B8AA solid; font-weight: normal; letter-spacing: -.4px;">here</a> is a quick blog post I wrote last year to promote safe and fun winter biking! (Illustration and web development by <a href="https://www.instagram.com/birdteethcreate/" target="new" style="border-bottom: 1px black solid;">Remy Thomas</a>).  </ul>
