Link back to work

--- a/showbuddy.html
+++ b/showbuddy.html
@@ -54,6 +54,10 @@
              <a href="contact.html">
                <span>Get in touch</span>
              </a>
+         </li><li>
+             <a href="index.html#proj">
+               <span>View work</span>
+             </a>
          </li>
        </ul>     
      </div>    
