--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,10 @@
              <a href="contact.html">
                <span>Get in touch</span>
              </a>
+         </li><li>
+             <a href="index.html#proj">
+               <span>View work</span>
+             </a>
          </li>
        </ul>     
      </div>      
