--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         document.addEventListener("touchstart", function() {},false);
         
       function scrollProj() {
-             document.querySelector('.proj').scrollIntoView({ 
+             document.querySelector('.background').scrollIntoView({ 
               behavior: 'smooth', block: 'start' 
                   
           });
