--- a/resume.html
+++ b/resume.html
@@ -147,7 +147,7 @@
       <div class="inst"> Full-Service Shopper and Delivery Driver <br>
                     <a href="https://www.instacart.com/" target="new" cursor="pointer" >
                     <span>Instacart</span> </a> - Chicago, Illinois <br>
-                     2017 - 2018 
+                     February 2017 - August 2018 
                     <p class="disc"> Worked independently with sophisticated mobile technology to resolve problems swiftly and provide high levels of customer service 
                     </p> 
                      
@@ -156,7 +156,7 @@
       <div class="trk"> Regional Tanker Driver (CDL) <br>
                     <a href="https://schneider.com/our-services/bulk" target="new" cursor="pointer"> 
                      <span>Schneider Bulk Carriers</span> </a> - Gary, Indiana <br>
-                     2015 - 2017 
+                     October 2015 - January 2017 
                      <p class="disc"> Interacted safely and professionally with tractor-trailer and tanker equipment, delivering chemicals in industrial settings and using in-truck satellite technology to effectively communicate daily with dispatch
                     </p> 
       </div>   
@@ -164,7 +164,7 @@
       <div class="trms"> Customer Service Representative <br>
                     <a href="http://www.trustrms.com" target="new" cursor="pointer">
                      <span>Trust Risk Management Services</span> </a> - Chicago, Illinois <br>
-                     2013 - 2015
+                     July 2013 - July 2015
                     <p class="disc"> Provided assuring experiences to insureds via daily workflow of phone calls and document processing using proprietary enterprise software
                     </p> 
       </div>    
@@ -172,7 +172,7 @@
       <div class="harv"> Combine Crew Member <br>
                    <a href="http://www.odegardharvesting.com/" target="new" cursor="pointer">
                      <span>Odegard Harvesting</span> </a> - Whitetail, Montana <br>
-                     2012 - 2013
+                     May 2012 - June 2013
                     <p class="disc">Operated highly complex, partially autonomous machinery harvesting 20+ tons of grain per hour on substantial acreages throughout the Grain Belt 
                     </p> 
       </div>   
