--- a/resume.html
+++ b/resume.html
@@ -184,8 +184,9 @@
              <li> Hiking </li>
              <li> Camping </li>
              <li> Biking </li> 
-             <li> Travelling </li>
-             <li> Geography </li>   
+             <li> Traveling </li>
+             <li> Geography </li> 
+             <li> Permaculture </li>   
              <li> Classical Music </li>  
              <li> American Music </li> 
              <li> Photography </li>
