--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                 <ul>
                  <li> <a class="" href="dyz.html"><span>Daiyuzenji Promotional Materials</span></a> </li>
                  <li> <a class="" href="portfolio.html"><span>Portfolio Website Design</span></a> </li>  
+                 <li> <a class="" href="jams.html"><span>Front-end Development Project</span></a> </li>  
                       
             </ul>          
         </div>
