--- a/veo.html
+++ b/veo.html
@@ -94,7 +94,7 @@
      </ul> 
      <ul class="l4">
         <li>
-           An early-stage startup is exciting to work for, but inchoate branding, culture, and leadership can be challenging to function and progress within, even for a self-motivated professional.
+           An early-stage startup is exciting to work for, but uneven commitments to branding, culture, and leadership can be challenging to function and progress within, even for a self-motivated professional.
         </li>
      </ul>
        
